# vibe-mahjong-duo

backend/: .gitignore  advisor.py  app.py  database.py  pyproject.toml  rules_core.py  server.py  simulation.py
backend/mahjong_duo/: app.py  rules_core.py
backend/mahjong_duo/advisors/: advisor.py  advisor_random.py
backend/scripts/: serve.sh  simulation.py
backend/tests/rules_core/: test_basic.py  test_game_actions.py  test_game_init.py  test_legal_choices.py  test_meld_checks.py  test_rob_kong.py  test_scoring.py  test_winning_conditions.py
frontend/: .env  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.vue  style.css
frontend/src/components/: FanSummary.vue  GameLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: game.ts
frontend/src/utils/: displayName.ts
frontend/src/views/: FanRulesView.vue  GameView.vue  JoinRoomView.vue  LoginView.vue  ProfileView.vue  VictoryView.vue
